--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,11 @@
 name: Build and Deploy to Netlify
 on:
   push:
+    branches:
+      - main
   pull_request:
+    branches:
+      - main
 jobs:
   build:
     runs-on: ubuntu-18.04
